<resources>
    <string name="app_name">Smart Reminders Lite Alpha</string>
    <string name="version_string">18.09.2</string>
    <string name="api_string">12.3.0</string>
    <string name="pull">alpha</string>

    <string name="_3rd_party_libraries_used_in_this_app">3rd Party Libraries Used in this App</string>

    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_note">Add Note</string>
    <string name="add_task">Add Task</string>
    <string name="anko">Anko 0.10.5</string>
    <string name="anko_path">https://github.com/Kotlin/anko/releases/tag/v0.10.5</string>
    <string name="api">API</string>

    <string name="build">Build</string>

    <string name="check_for_updates">Check for Updates</string>
    <string name="close">Close</string>
    <string name="complete">Completed.</string>
    <string name="completed">Completed.</string>
    <string name="completed_tasks">Completed Tasks [%1$d]</string>
    <string name="coming_soon">Coming Soon.</string>
    <string name="con">Continue</string>
    <string name="_continue">Continue</string>
    <string name="copy">Copy</string>
    <string name="create_a_shortcut_for_this_folder">Create a shortcut for this Folder.</string>
    <string name="create_a_shortcut_for_this_task">Create a shortcut for this Task.</string>

    <string name="day">Day</string>
    <string name="day_shortcut">Day Shortcut</string>
    <string name="device_name">Device Name</string>
    <string name="done">Done</string>
    <string name="down">Down</string>
    <string name="downgrade_to_api_11">Downgrade to API 11</string>

    <string name="edit">Edit</string>
    <string name="external">External</string>

    <string name="fab">Floating Action Button 2.1.1</string>
    <string name="fab_path">https://github.com/tfcbandgeek/FloatingActionButton/releases/tag/p2.1.1</string>

    <string name="high">High</string>
    <string name="high_priority">"High Priority"</string>
    <string name="home">Home</string>

    <string name="ignore">Ignore</string>
    <string name="_import">Import</string>
    <string name="incomplete">Incomplete</string>
    <string name="incomplete_tasks">Incomplete Tasks [%1$d]</string>
    <string name="internal">Internal</string>

    <string name="kotlin">Kotlin 1.2.61</string>
    <string name="kotlin_path">https://github.com/JetBrains/kotlin/releases/tag/v1.2.61</string>

    <string name="low">Low</string>
    <string name="low_priority_default">"Low Priority (Default)"</string>

    <string name="month">Month</string>
    <string name="month_shortcut">Month Shortcut</string>
    <string name="month_view">Month View</string>
    <string name="more">More</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="no_date">No Date</string>
    <string name="no_tags">No Tags</string>
    <string name="no_update_found">No Update Found</string>
    <string name="normal">Normal</string>
    <string name="normal_priority">"Normal Priority"</string>
    <string name="note">Note</string>

    <string name="overdue">Overdue</string>
    <string name="overdue_tasks">Overdue Tasks [%1$d]</string>

    <string name="pool_utility">PoolUtility 1.1.1</string>
    <string name="pool_utility_path">https://github.com/tfcbandgeek/PoolUtility/releases/tag/r1.1.1</string>
    <string name="prev">Prev</string>
    <string name="priority">Priority</string>
    <string name="priority_shortcut">Priority Shortcut</string>

    <string name="save">Save</string>
    <string name="saved">Saved.</string>
    <string name="save_alert_message">Save the Information to the Documents Folder.   This requires an additional permission but allows the information to be shared with other apps.</string>
    <string name="save_app">Saving to App Directory</string>
    <string name="save_external">Saving to External File</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="settings">Settings</string>
    <string name="saving_to_app_directory">Saving to App Directory</string>
    <string name="sort">Sort</string>
    <string name="sort_by_days">Sort by Days</string>
    <string name="sort_by_month">Sort by Month</string>
    <string name="sort_by_priority">Sort by Priority</string>
    <string name="sort_by_status">Sort by Status</string>
    <string name="sort_by_tags">Sort by Tags</string>
    <string name="sort_by_week">Sort by Week</string>
    <string name="sort_options">Sort Options</string>
    <string name="stared">Stared</string>
    <string name="stared_tasks">Stared Tasks</string>
    <string name="status">Status</string>
    <string name="status_shortcut">Status Shortcut</string>

    <string name="tag_shortcut">Tag Shortcut</string>
    <string name="tags">Tags</string>
    <string name="tasks">Tasks</string>
    <string name="text">Text</string>
    <string name="this_month">This Month</string>
    <string name="title">Title</string>
    <string name="today">Today</string>
    <string name="tutorial">Tutorial</string>

    <string name="unselected">Unselected</string>
    <string name="up">Up</string>
    <string name="upgrade_to_api_12_testing">Upgrade to API 12 (Currently in Testing)</string>
    <string name="update_found">Update Found</string>

    <string name="version">Version</string>

    <string name="week">Week</string>
    <string name="week_shortcut">Week Shortcut</string>

    <string name="your_name">Your Name</string>

    <string name="zxing_embedded">Zxing Embedded 3.6.0</string>
    <string name="zxing_embedded_path">https://github.com/journeyapps/zxing-android-embedded/releases/tag/v3.6.0</string>
</resources>