<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/tags"
        android:id="@+id/tags"/>

    <item
        android:title="@string/status"
        android:id="@+id/status"/>

    <item
        android:title="@string/priority"
        android:id="@+id/priority" />

    <item
        android:title="@string/day"
        android:id="@+id/day"/>

    <item
        android:title="@string/week"
        android:id="@+id/week"/>

    <item
        android:title="@string/month"
        android:id="@+id/month"/>

    <item
        android:title="@string/settings"
        android:id="@+id/settings" />

    <item
        android:title="@string/about"
        android:id="@+id/about" />

    <item
        android:title="@string/save"
        android:id="@+id/save"/>

    <item
        android:title="@string/close"
        android:id="@+id/close"/>
</menu>