<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4sp"
    android:paddingRight="4sp"
    android:paddingTop="4sp"
    android:paddingBottom="4sp"
    android:id="@+id/settings_root">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/settings_list">

            <!--User Name-->
            <EditText
                android:id="@+id/settings_your_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <!--Device Name-->
            <EditText
                android:id="@+id/settings_device_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_name"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <!--Save Location-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_alert_message" />

            <Button
                android:id="@+id/settings_app_directory_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saving_to_app_directory" />

            <!--Upgrade-->
            <Button
                android:id="@+id/settings_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_to_api_12_testing"/>

            <!--Shortcuts-->
            <Switch
                android:id="@+id/settings_tag_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_shortcut" />

            <Switch
                android:id="@+id/settings_priority_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority_shortcut" />

            <Switch
                android:id="@+id/settings_status_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_shortcut" />

            <Switch
                android:id="@+id/settings_day_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_shortcut" />

            <Switch
                android:id="@+id/settings_week_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/week_shortcut" />

            <Switch
                android:id="@+id/settings_month_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month_shortcut" />
        </LinearLayout>
    </ScrollView>

    <!--Continue Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/con"
        android:id="@+id/settings_continue_button"/>
</LinearLayout>