<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Title Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:paddingTop="4sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:hint="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:inputType="text" />
    </LinearLayout>

    <!--Note Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="4sp"
        android:paddingRight="4sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note"
            android:hint="@string/note"
            android:textSize="12sp"
            android:textStyle="normal"
            android:inputType="text" />
    </LinearLayout>

    <!--Tag Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="4sp"
        android:paddingRight="4sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tags"
            android:text="@string/no_tags"
            android:textSize="14sp"
            android:textStyle="italic"
            android:padding="4sp"/>
    </LinearLayout>

    <!--Status Bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="4sp"
        android:paddingRight="4sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_date"
            android:id="@+id/date"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status"
            android:id="@+id/status"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--Priority Bar-->
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priority"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"/>

    <!--List View-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tasks"
            android:paddingBottom="8sp"/>

        <LinearLayout
            android:id="@+id/task_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/background_dark"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/task_bottom_bar_search"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginStart="4sp"
                android:layout_marginEnd="4sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp"
                android:contentDescription="Search"
                android:src="@android:drawable/ic_menu_search" />

            <!--ImageView
                android:id="@+id/task_bottom_bar_more"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginBottom="4sp"
                android:layout_marginEnd="4sp"
                android:layout_marginStart="4sp"
                android:layout_marginTop="4sp"
                android:contentDescription="Settings"
                android:src="@android:drawable/ic_menu_manage" /-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_bottom_bar_search_text"
                android:hint="@string/search"
                android:visibility="invisible"/>
        </LinearLayout>

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@android:drawable/ic_menu_add"
            android:id="@+id/task_add_checkpoint"/>
    </RelativeLayout>
</LinearLayout>